--- a/partial-builder.cabal
+++ b/partial-builder.cabal
@@ -30,3 +30,4 @@ library
     build-depends:    base ^>=4.15.1.0
     hs-source-dirs:   src
     default-language: Haskell2010
+    ghc-options: -Wall
