--- a/partial-builder.cabal
+++ b/partial-builder.cabal
@@ -22,11 +22,8 @@ maintainer:         guillaum.bouchard@gmail.com
 extra-source-files: CHANGELOG.md
 
 library
-    -- Modules included in this executable, other than Main.
-    other-modules: PartialBuilder
+    exposed-modules: PartialBuilder
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
     build-depends:    base ^>=4.15.1.0
     hs-source-dirs:   src
     default-language: Haskell2010
